Added shell controller/test/model for concept endpoints
